Correct z-index bug caused by recharts

--- a/src/components/PrimaryNavigation/index.module.scss
+++ b/src/components/PrimaryNavigation/index.module.scss
@@ -3,6 +3,7 @@
 .header {
   position: fixed;
   top: 0;
+  z-index: 300;
   width: 100%;
   display: flex;
   align-items: center;
